<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="13dp"
    android:gravity="center"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical"
    tools:context=".LoginActivity">


    <ProgressBar
        android:id="@+id/login_progressbar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <AutoCompleteTextView
        android:id="@+id/email_login"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/password_login"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/login_button_login"
        android:text="@string/login"
        android:textSize="15sp"
        android:textColor="@color/purple_200"
        android:background="@android:color/transparent"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/or_text_login"
        android:text="@string/or"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/create_account_button_login"
        android:text="@string/create_account"
        android:textSize="15sp"
        android:textColor="@color/purple_200"
        android:background="@android:color/transparent"
        android:layout_marginTop="6dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>