<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/app_title"
        android:text="@string/app_title"
        android:textSize="28sp"
        android:fontFamily="@font/roboto_slab_bold"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RelativeLayout
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            app:cardElevation="6dp"
            app:cardCornerRadius="8dp"
            app:cardUseCompatPadding="true"
            android:layout_width="match_parent"
            android:layout_height="90dp">


            <TextView
                android:layout_gravity="center"
                android:textSize="19sp"
                android:id="@+id/app_primary_sentence"
                android:text="@string/primary_app_sentence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.cardview.widget.CardView>



    </RelativeLayout>

    <Button
        android:id="@+id/get_started_button"
        android:textColor="@color/purple_200"
        android:background="@android:color/transparent"
        android:text="@string/get_started"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>





</LinearLayout>